--- a/driverWebAppFrontEnd/src/app/login-form/login-form.component.html
+++ b/driverWebAppFrontEnd/src/app/login-form/login-form.component.html
@@ -1,3 +1,36 @@
 <p>
   Yo guys!
 </p>
+<div class="row">
+  <div class="col-sm-6">
+    <form (ngSubmit)="saveUser()" #userForm="ngForm" method="post">
+      <div class="form-group">
+        <label for="username">
+          <input type="text" name="username" class="form-control" [(ngModel)]="user.username" required>
+        </label>
+      </div>
+      <div class="form-group">
+        <label for="password">
+          <input type="text" name="password" class="form-control" [(ngModel)]="user.password" required>
+        </label>
+      </div>
+      <div class="form-group">
+        <label for="email">
+          <input type="email" name="email" class="form-control" [(ngModel)]="user.email" required>
+        </label>
+      </div>
+      <div class="form-group">
+        <label for="firstname">
+          <input type="text" name="email" class="form-control" [(ngModel)]="user.fname" required>
+        </label>
+      </div><div class="form-group">
+        <label for="lastname">
+          <input type="text" name="lastname" class="form-control" [(ngModel)]="user.lname" required>
+        </label>
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-success" [disabled]="!userForm.form.valid">Save</button>
+      </div>
+    </form>
+  </div>
+</div>
